crates/java-syntax/tests/snapshots/incremental_snapshots__boundary_cross_nodes.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
class A { void m1() {}  void m2(){} }

EDIT:
  range: 21..34
  text: "} // gap // void m3() {"

RESULT_SOURCE:
class A { void m1() {} // gap // void m3() {} }

TREE:
ROOT@0..47
  CLASS_DECL@0..47
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..47
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      METHOD_DECL@9..22
        WHITESPACE@9..10 " "
        VOID_KW@10..14 "void"
        WHITESPACE@14..15 " "
        IDENTIFIER@15..17 "m1"
        FORMAL_PARAMETERS@17..19
          L_PAREN@17..18 "("
          R_PAREN@18..19 ")"
        BLOCK@19..22
          WHITESPACE@19..20 " "
          L_BRACE@20..21 "{"
          R_BRACE@21..22 "}"
      MISSING@22..47
        WHITESPACE@22..23 " "
        LINE_COMMENT@23..47 "// gap // void m3() {} }"
