crates/java-syntax/tests/snapshots/incremental_snapshots__boundary_touch_left.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
class A {void m(){}}

EDIT:
  range: 9..19
  text: " int x; void m(){} "

RESULT_SOURCE:
class A { int x; void m(){} }

TREE:
ROOT@0..29
  CLASS_DECL@0..29
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..29
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      FIELD_DECL@9..16
        WHITESPACE@9..10 " "
        TYPE@10..13
          INT_KW@10..13 "int"
        VARIABLE_DECLARATOR_LIST@13..15
          WHITESPACE@13..14 " "
          VARIABLE_DECLARATOR@14..15
            IDENTIFIER@14..15 "x"
        SEMICOLON@15..16 ";"
      METHOD_DECL@16..27
        WHITESPACE@16..17 " "
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..23 "m"
        FORMAL_PARAMETERS@23..25
          L_PAREN@23..24 "("
          R_PAREN@24..25 ")"
        BLOCK@25..27
          L_BRACE@25..26 "{"
          R_BRACE@26..27 "}"
      WHITESPACE@27..28 " "
      R_BRACE@28..29 "}"
