crates/java-syntax/tests/snapshots/incremental_snapshots__kind_annotation_body.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
@interface MyAttr { String value(); }

EDIT:
  range: 20..35
  text: "String value(); int id() default 0;"

RESULT_SOURCE:
@interface MyAttr { String value(); int id() default 0; }

TREE:
ROOT@0..57
  ANNOTATION_TYPE_DECL@0..57
    AT@0..1 "@"
    INTERFACE_KW@1..10 "interface"
    WHITESPACE@10..11 " "
    IDENTIFIER@11..17 "MyAttr"
    ANNOTATION_TYPE_BODY@17..57
      WHITESPACE@17..18 " "
      L_BRACE@18..19 "{"
      ANNOTATION_TYPE_ELEMENT_DECL@19..35
        WHITESPACE@19..20 " "
        TYPE@20..26
          QUALIFIED_NAME@20..26
            IDENTIFIER@20..26 "String"
        WHITESPACE@26..27 " "
        IDENTIFIER@27..32 "value"
        L_PAREN@32..33 "("
        R_PAREN@33..34 ")"
        SEMICOLON@34..35 ";"
      ANNOTATION_TYPE_ELEMENT_DECL@35..55
        WHITESPACE@35..36 " "
        TYPE@36..39
          INT_KW@36..39 "int"
        WHITESPACE@39..40 " "
        IDENTIFIER@40..42 "id"
        L_PAREN@42..43 "("
        R_PAREN@43..44 ")"
        WHITESPACE@44..45 " "
        DEFAULT_KW@45..52 "default"
        LITERAL@52..54
          WHITESPACE@52..53 " "
          NUMBER_LITERAL@53..54 "0"
        SEMICOLON@54..55 ";"
      WHITESPACE@55..56 " "
      R_BRACE@56..57 "}"
