crates/java-syntax/tests/snapshots/incremental_snapshots__kind_block.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
class A { void m() { int a = 1; } }

EDIT:
  range: 21..31
  text: "int a = 1; int b = 2;"

RESULT_SOURCE:
class A { void m() { int a = 1; int b = 2; } }

TREE:
ROOT@0..46
  CLASS_DECL@0..46
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..46
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      METHOD_DECL@9..44
        WHITESPACE@9..10 " "
        VOID_KW@10..14 "void"
        WHITESPACE@14..15 " "
        IDENTIFIER@15..16 "m"
        FORMAL_PARAMETERS@16..18
          L_PAREN@16..17 "("
          R_PAREN@17..18 ")"
        BLOCK@18..44
          WHITESPACE@18..19 " "
          L_BRACE@19..20 "{"
          LOCAL_VARIABLE_DECLARATION_STMT@20..31
            WHITESPACE@20..21 " "
            LOCAL_VARIABLE_DECLARATION@21..30
              TYPE@21..24
                INT_KW@21..24 "int"
              VARIABLE_DECLARATOR_LIST@24..30
                WHITESPACE@24..25 " "
                VARIABLE_DECLARATOR@25..30
                  IDENTIFIER@25..26 "a"
                  WHITESPACE@26..27 " "
                  EQUAL@27..28 "="
                  LITERAL@28..30
                    WHITESPACE@28..29 " "
                    NUMBER_LITERAL@29..30 "1"
            SEMICOLON@30..31 ";"
          LOCAL_VARIABLE_DECLARATION_STMT@31..42
            WHITESPACE@31..32 " "
            LOCAL_VARIABLE_DECLARATION@32..41
              TYPE@32..35
                INT_KW@32..35 "int"
              VARIABLE_DECLARATOR_LIST@35..41
                WHITESPACE@35..36 " "
                VARIABLE_DECLARATOR@36..41
                  IDENTIFIER@36..37 "b"
                  WHITESPACE@37..38 " "
                  EQUAL@38..39 "="
                  LITERAL@39..41
                    WHITESPACE@39..40 " "
                    NUMBER_LITERAL@40..41 "2"
            SEMICOLON@41..42 ";"
          WHITESPACE@42..43 " "
          R_BRACE@43..44 "}"
      WHITESPACE@44..45 " "
      R_BRACE@45..46 "}"
