crates/java-syntax/tests/snapshots/incremental_snapshots__kind_enum_body.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
enum E { A, B }

EDIT:
  range: 9..13
  text: "A, B, C; void extra(){}"

RESULT_SOURCE:
enum E { A, B, C; void extra(){} }

TREE:
ROOT@0..34
  ENUM_DECL@0..34
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    IDENTIFIER@5..6 "E"
    ENUM_BODY@6..34
      WHITESPACE@6..7 " "
      L_BRACE@7..8 "{"
      ENUM_CONSTANT@8..10
        WHITESPACE@8..9 " "
        IDENTIFIER@9..10 "A"
      COMMA@10..11 ","
      ENUM_CONSTANT@11..13
        WHITESPACE@11..12 " "
        IDENTIFIER@12..13 "B"
      COMMA@13..14 ","
      ENUM_CONSTANT@14..16
        WHITESPACE@14..15 " "
        IDENTIFIER@15..16 "C"
      SEMICOLON@16..17 ";"
      METHOD_DECL@17..32
        WHITESPACE@17..18 " "
        VOID_KW@18..22 "void"
        WHITESPACE@22..23 " "
        IDENTIFIER@23..28 "extra"
        FORMAL_PARAMETERS@28..30
          L_PAREN@28..29 "("
          R_PAREN@29..30 ")"
        BLOCK@30..32
          L_BRACE@30..31 "{"
          R_BRACE@31..32 "}"
      WHITESPACE@32..33 " "
      R_BRACE@33..34 "}"
