crates/java-syntax/tests/snapshots/incremental_snapshots__kind_interface_body.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
interface I { void m(); }

EDIT:
  range: 14..23
  text: "void m(); int CONST = 1;"

RESULT_SOURCE:
interface I { void m(); int CONST = 1; }

TREE:
ROOT@0..40
  INTERFACE_DECL@0..40
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..11 "I"
    INTERFACE_BODY@11..40
      WHITESPACE@11..12 " "
      L_BRACE@12..13 "{"
      METHOD_DECL@13..23
        WHITESPACE@13..14 " "
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..20 "m"
        FORMAL_PARAMETERS@20..22
          L_PAREN@20..21 "("
          R_PAREN@21..22 ")"
        SEMICOLON@22..23 ";"
      FIELD_DECL@23..38
        WHITESPACE@23..24 " "
        TYPE@24..27
          INT_KW@24..27 "int"
        VARIABLE_DECLARATOR_LIST@27..37
          WHITESPACE@27..28 " "
          VARIABLE_DECLARATOR@28..37
            IDENTIFIER@28..33 "CONST"
            WHITESPACE@33..34 " "
            EQUAL@34..35 "="
            LITERAL@35..37
              WHITESPACE@35..36 " "
              NUMBER_LITERAL@36..37 "1"
        SEMICOLON@37..38 ";"
      WHITESPACE@38..39 " "
      R_BRACE@39..40 "}"
