crates/java-syntax/tests/snapshots/incremental_snapshots__kind_module_body.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
module com.test { requires java.base; }

EDIT:
  range: 18..37
  text: "requires java.base; exports com.test.api;"

RESULT_SOURCE:
module com.test { requires java.base; exports com.test.api; }

TREE:
ROOT@0..61
  MODULE_DECL@0..61
    IDENTIFIER@0..6 "module"
    QUALIFIED_NAME@6..15
      WHITESPACE@6..7 " "
      IDENTIFIER@7..10 "com"
      DOT@10..11 "."
      IDENTIFIER@11..15 "test"
    MODULE_BODY@15..61
      WHITESPACE@15..16 " "
      L_BRACE@16..17 "{"
      REQUIRES_DIRECTIVE@17..37
        WHITESPACE@17..18 " "
        IDENTIFIER@18..26 "requires"
        QUALIFIED_NAME@26..36
          WHITESPACE@26..27 " "
          IDENTIFIER@27..31 "java"
          DOT@31..32 "."
          IDENTIFIER@32..36 "base"
        SEMICOLON@36..37 ";"
      EXPORTS_DIRECTIVE@37..59
        WHITESPACE@37..38 " "
        IDENTIFIER@38..45 "exports"
        QUALIFIED_NAME@45..58
          WHITESPACE@45..46 " "
          IDENTIFIER@46..49 "com"
          DOT@49..50 "."
          IDENTIFIER@50..54 "test"
          DOT@54..55 "."
          IDENTIFIER@55..58 "api"
        SEMICOLON@58..59 ";"
      WHITESPACE@59..60 " "
      R_BRACE@60..61 "}"
